--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
