--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-google-login": "^5.2.2",
+        "react-lazyload": "^3.2.1",
         "react-router-dom": "^6.26.1",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
