--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "normalize.css": "^8.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-google-login": "^5.2.2",
+        "react-input-slider": "^6.0.1",
         "react-lazyload": "^3.2.1",
         "react-router-dom": "^6.26.1",
         "react-scripts": "5.0.1",
