--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
         "axios": "^1.7.7",
         "clsx": "^2.1.1",
         "normalize.css": "^8.0.1",
+        "rc-slider": "^11.1.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-input-slider": "^6.0.1",
         "react-lazyload": "^3.2.1",
         "react-router-dom": "^6.26.1",
         "react-scripts": "5.0.1",
